--- a/Resources/Prototypes/SS220/Catalog/Fills/Items/briefcases.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Items/briefcases.yml
@@ -18,7 +18,7 @@
     containers:
       storagebase: !type:Container
       hidden_slot: !type:ContainerSlot { }
-  - type: SwitchToggleItemSlots
+  - type: ToggleableItemSlot
     hiddenItemSlot:
       name: construction-category-weapons
       locked: true
