--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -21,9 +21,9 @@
     - suitStorage
   - type: AmmoCounter
   - type: Gun
-    minAngle: 11 #SS220 Update
-    maxAngle: 20 #SS220 Update
-    fireRate: 7.5 #SS220 Update
+    minAngle: 11 #220 SG Angle Updates
+    maxAngle: 20 #220 SG Angle Updates
+    fireRate: 7.5 #220 SG Angle Updates
     burstFireRate: 8
     angleIncrease: 3
     angleDecay: 16
@@ -78,7 +78,7 @@
     - state: mag-0
       map: ["enum.GunVisualLayers.Mag"]
   - type: Gun
-    fireRate: 8 #SS220 Update
+    fireRate: 8 #220 SG Angle Updates
     soundGunshot:
       path: /Audio/Weapons/Guns/Gunshots/atreides.ogg
   - type: MagazineVisuals
@@ -105,12 +105,12 @@
   - type: Wieldable
     unwieldOnUse: false
   - type: GunWieldBonus
-    minAngle: -2 #SS220 Update
-    maxAngle: -13 #SS220 Update
+    minAngle: -2 #220 SG Angle Updates
+    maxAngle: -13 #220 SG Angle Updates
   - type: Gun
-    minAngle: 17 #SS220 Update
-    maxAngle: 29 #SS220 Update
-    shotsPerBurst: 6 #SS220 Update
+    minAngle: 17 #220 SG Angle Updates
+    maxAngle: 29 #220 SG Angle Updates
+    shotsPerBurst: 6 #220 SG Angle Updates
     availableModes:
     - Burst
     - FullAuto
@@ -143,12 +143,12 @@
     - type: Wieldable
       unwieldOnUse: false
     - type: GunWieldBonus
-      minAngle: -2 #SS220 Update
-      maxAngle: -13 #SS220 Update
+      minAngle: -2 #220 SG Angle Updates
+      maxAngle: -13 #220 SG Angle Updates
     - type: Gun
-      minAngle: 17 #SS220 Update
-      maxAngle: 29 #SS220 Update
-      fireRate: 6.5 #SS220 Update
+      minAngle: 17 #220 SG Angle Updates
+      maxAngle: 29 #220 SG Angle Updates
+      fireRate: 6.5 #220 SG Angle Updates
       burstFireRate: 12
       soundGunshot:
         path: /Audio/Weapons/Guns/Gunshots/atreides.ogg
@@ -207,9 +207,9 @@
   - type: ChamberMagazineAmmoProvider
     boltClosed: null
   - type: Gun
-    fireRate: 6.5 #SS220 Update
-    minAngle: 17 #SS220 Update
-    maxAngle: 27 #SS220 Update
+    fireRate: 6.5 #220 SG Angle Updates
+    minAngle: 17 #220 SG Angle Updates
+    maxAngle: 27 #220 SG Angle Updates
     angleIncrease: 1.5
     angleDecay: 6
     selectedMode: FullAuto
