--- a/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/jumpsuits.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/jumpsuits.yml
@@ -758,3 +758,15 @@
     sprite: SS220/Clothing/Uniforms/Jumpsuit/ussp_uniform.rsi
   - type: Clothing
     sprite: SS220/Clothing/Uniforms/Jumpsuit/ussp_uniform.rsi
+
+- type: entity
+  parent: ClothingUniformBase
+  id: ClothingUniformJumpsuitBartenderHelmCorp
+  name: helm corp. bartender's uniform
+  description: Special equipment for serving beer
+  suffix: Helm Corp.
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/bartender_helm.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/bartender_helm.rsi
