--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/Drinks/drinks_cans.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/Drinks/drinks_cans.yml
@@ -1,37 +1,13 @@
 - type: entity
   id: DrinkCanPackBeer
-  parent: BaseStorageItem
+  parent: DrinkCanPack
   name: держатель для напитков
   suffix: Пиво
   description: Служит для удобного хранения сразу нескольких банок пива.
   components:
   - type: Sprite
     sprite: SS220/Objects/Misc/6pack.rsi
-    layers:
-      - state: plastic-thingy
-      - state: 6pack1
-        map: ["6pack1"]
-        visible: false
-      - state: 6pack2
-        map: ["6pack2"]
-        visible: false
-      - state: 6pack3
-        map: ["6pack3"]
-        visible: false
-      - state: 6pack4
-        map: ["6pack4"]
-        visible: false
-      - state: 6pack5
-        map: ["6pack5"]
-        visible: false
-      - state: 6pack6
-        map: ["6pack6"]
-        visible: false
-  - type: Item
-    size: Normal
   - type: Storage
-    grid:
-    - 0,0,2,3
     whitelist:
       tags:
       - Beer
@@ -43,11 +19,25 @@
   - type: ItemCounter
     count:
       tags: [Beer]
-    composite: true
-    layerStates:
-    - 6pack1
-    - 6pack2
-    - 6pack3
-    - 6pack4
-    - 6pack5
-  - type: Appearance
+
+- type: entity
+  parent: DrinkCanBaseFull
+  id: DrinkSpaceBeerCan
+  name: space beer can
+  description: A small joy in the boundless universe.
+  components:
+  - type: SolutionContainerManager
+    solutions:
+      drink:
+        maxVol: 30
+        reagents:
+        - ReagentId: SpaceBeer
+          Quantity: 30
+  - type: Drink
+  - type: Sprite
+    sprite: SS220/Objects/Consumable/Drinks/space_beer_can.rsi
+  - type: Item
+    sprite: SS220/Objects/Consumable/Drinks/space_beer_can.rsi
+  - type: Tag
+    tags:
+    - Beer
