--- a/Resources/Prototypes/SS220/Flavors/flavors.yml
+++ b/Resources/Prototypes/SS220/Flavors/flavors.yml
@@ -52,3 +52,8 @@
   id: Bacchus
   flavorType: Complex
   description: flavor-complex-bacchus
+
+- type: flavor
+  id: spacebeer
+  flavorType: Complex
+  description: flavor-complex-spacebeer
