Added Shared systems'n'components + modified proto

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
@@ -5,6 +5,30 @@
   description: A rooty tooty point and shooty.
   abstract: true
   components:
+  #SS220-NewAttachables begin
+  - type: AttachablesContainer
+    slots:
+      attachment_slot_muzzle:
+        name: Muzzle
+        whitelist:
+          tags:
+            - AttachmentMuzzle
+      attachment_slot_rail:
+        name: Rail
+        whitelist:
+          tags:
+            - AttachmentRail
+      attachment_slot_underbarrel:
+        name: Underbarrel
+        whitelist:
+          tags:
+            - AttachmentUnderbarrel
+      attachment_slot_stock:
+        name: Stock
+        whitelist:
+          tags:
+            - AttachmentStock
+  #SS220-NewAttachables end
   - type: EmitSoundOnLand
     sound:
       path: /Audio/SS220/Effects/Drop/rifles.ogg
@@ -55,6 +79,12 @@
     containers:
       gun_magazine: !type:ContainerSlot
       gun_chamber: !type:ContainerSlot
+      #SS220-NewAttachables begin
+      attachment_slot_muzzle: !type:ContainerSlot
+      attachment_slot_rail: !type:ContainerSlot
+      attachment_slot_underbarrel: !type:ContainerSlot
+      attachment_slot_stock: !type:ContainerSlot
+      #SS220-NewAttachables end
   - type: StaticPrice
     price: 500
 
