--- a/Resources/Prototypes/SS220/Catalog/Fills/Backpacks/backpack.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Backpacks/backpack.yml
@@ -148,7 +148,7 @@
   - type: StorageFill
     contents:
       - id: BoxSurvivalSecurity
-      - id: WeaponBlasterKRS
+      - id: WeaponBlasterKRV
       - id: BlasterPowerCellPulse
         amount: 3
       - id: BlasterPowerCellDisabler
