--- a/Resources/Prototypes/Recipes/Lathes/Packs/science.yml
+++ b/Resources/Prototypes/Recipes/Lathes/Packs/science.yml
@@ -54,6 +54,7 @@
   recipes:
   - PowerCellMicroreactor
   - PowerCellHigh
+  - BlasterPowerCellAlt #SS220 BlueShield MinorFix
 
 - type: latheRecipePack
   id: ScienceWeapons
