--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Ammunition/powercells.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/Ammunition/powercells.yml
@@ -1,45 +1,106 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 
+#Base
 - type: entity
-  parent: BlasterPowerCell
+  abstract: true
+  parent: BaseItem
+  id: KRSPowerCell
+  components:
+  - type: Item
+  - type: Battery
+    pricePerJoule: 0.15
+    maxCharge: 800
+    startingCharge: 800
+  - type: PowerCell
+  - type: Sprite
+    sprite: SS220/Objects/Weapons/Guns/Ammunition/Magazine/krs_magblaster.rsi
+    layers:
+    - map: [ "enum.PowerCellVisualLayers.Base" ]
+      state: base
+    - map: [ "enum.PowerCellVisualLayers.Unshaded" ]
+      state: laser-mag-unshaded-1
+      shader: unshaded
+  - type: SolutionContainerManager
+    solutions:
+      battery:
+        maxVol: 5
+  - type: InjectableSolution
+    solution: battery
+  - type: DrawableSolution
+    solution: battery
+  - type: Extractable
+    juiceSolution:
+      reagents:
+        - ReagentId: Zinc
+          Quantity: 5
+  - type: Tag
+    tags:
+      - KRSPowerCell
+  - type: Appearance
+  - type: PowerCellVisuals
+  - type: Riggable
+  - type: AmmoCounter
+  - type: ProjectileBatteryAmmoProvider
+    proto: BulletBlaster
+    fireCost: 32
+
+- type: entity
+  parent: KRSPowerCell
   id: BlasterPowerCellAlt
   name: blaster power cell
   description: It contains a lot more pain than you ever dreamed of.
   suffix:  Laser
   components:
-  - type: Battery
-    pricePerJoule: 0.15
-    maxCharge: 2000
-    startingCharge: 2000
   - type: ProjectileBatteryAmmoProvider
     proto: BulletBlasterAlt
-    fireCost: 100
+    fireCost: 40
 
 - type: entity
-  parent: BlasterPowerCell
+  id: BlasterPowerCellAltPrinted
+  suffix: Empty
+  parent: BlasterPowerCellAlt
+  components:
+  - type: Sprite
+    sprite: SS220/Objects/Weapons/Guns/Ammunition/Magazine/krs_magblaster.rsi
+    layers:
+    - map: [ "enum.PowerCellVisualLayers.Base" ]
+      state: base
+    - map: [ "enum.PowerCellVisualLayers.Unshaded" ]
+      state: laser-mag-unshaded-1
+      shader: unshaded
+      visible: false
+  - type: Battery
+    maxCharge: 800
+    startingCharge: 0
+
+- type: entity
+  parent: KRSPowerCell
   id: BlasterPowerCellDisabler
   name: blaster power cell
   description: It contains a lot more pain than you ever dreamed of.
   suffix: Disabler
   components:
-  - type: Battery
-    pricePerJoule: 0.15
-    maxCharge: 2000
-    startingCharge: 2000
+  - type: Sprite
+    layers:
+    - map: [ "enum.PowerCellVisualLayers.Base" ]
+      state: base
+    - map: [ "enum.PowerCellVisualLayers.Unshaded" ]
+      state: disabler-mag-unshaded-1
+      shader: unshaded
   - type: ProjectileBatteryAmmoProvider
     proto: BulletDisablerSmg
-    fireCost: 65
+    fireCost: 24
 
 - type: entity
-  parent: BlasterPowerCell
+  parent: KRSPowerCell
   id: BlasterPowerCellPulse
   name: blaster power cell
   description: It contains a lot more pain than you ever dreamed of.
   components:
   - type: Battery
     pricePerJoule: 0.15
-    maxCharge: 3000
-    startingCharge: 3000
+    maxCharge: 1200
+    startingCharge: 1200
   - type: ProjectileBatteryAmmoProvider
     proto: BulletBlasterPulse
-    fireCost: 120
+    fireCost: 48
