--- a/Resources/Prototypes/SS220/Loadouts/Jobs/InternalAffairs/iaa.yml
+++ b/Resources/Prototypes/SS220/Loadouts/Jobs/InternalAffairs/iaa.yml
@@ -20,6 +20,11 @@
 
 # Head
 - type: loadout
+  id: BeretIAA
+  equipment:
+    head: ClothingHeadHatBeretIAA
+
+- type: loadout
   id: DevilHorns
   effects:
   - !type:GroupLoadoutEffect
