--- a/Resources/Prototypes/SS220/Loadouts/Jobs/InternalAffairs/magistrate.yml
+++ b/Resources/Prototypes/SS220/Loadouts/Jobs/InternalAffairs/magistrate.yml
@@ -1,8 +1,26 @@
-#Head
+# Job Time
+- type: loadoutEffectGroup
+  id: StreetJudge
+  effects:
+  - !type:JobRequirementLoadoutEffect
+    requirement:
+      !type:RoleTimeRequirement
+      role: JobMagistrate
+      time: 360000 # 100 hrs Ахуеть, да?
+
+# Head
 - type: loadout
   id: MagistratePwig
   equipment:
     head: ClothingHeadHatPwig
+
+- type: loadout
+  id: MagistrateStreetJudge
+  effects:
+  - !type:GroupLoadoutEffect
+    proto: StreetJudge
+  equipment:
+    head: ClothingHeadHatStreetJudge
 
 # Outerclothing
 - type: loadout
