--- a/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
@@ -33,9 +33,9 @@
 - type: loadoutGroup
   id: MagistrateHead
   name: loadout-group-magistrate-head
-  hidden: true
   loadouts:
   - MagistratePwig
+  - MagistrateStreetJudge
 
 - type: loadoutGroup
   id: MagistrateJumpsuit
@@ -68,6 +68,7 @@
   name: loadout-group-iaa-head
   minLimit: 0
   loadouts:
+  - BeretIAA
   - DevilHorns
 
 - type: loadoutGroup
