--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/subdermal_implants.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/subdermal_implants.yml
@@ -122,14 +122,16 @@
         maxVol: 90
         canReact: false
         reagents:
+        #SS220 update-adrenalin begin
         - ReagentId: Rororium
-          Quantity: 4.5
+          Quantity: 1.5
         - ReagentId: Ephedrine
           Quantity: 15
         - ReagentId: Ichor
           Quantity: 30
         - ReagentId: Epinephrine
           Quantity: 28.5
+        #SS220 update-adrenalin end
   - type: TriggerImplantAction
   - type: HiddenDescription
     entries:
