ADD: Activatable UI for Pinpointer

--- a/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/medical.yml
@@ -150,3 +150,4 @@
       - id: OxygenTankFilled # SS220 - Changing the contents of the paramedic closet
       - id: NitrogenTankFilled # SS220 - Changing the contents of the paramedic closet
 #    - id: HandheldCrewMonitor # SS220 - RemoveParamedicCrewMonitor
+      - id: PinpointerCrew # ss220 - add pinpointer crew
