--- a/Resources/Prototypes/Entities/Objects/Misc/dat_fukken_disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/dat_fukken_disk.yml
@@ -22,6 +22,9 @@
     - HighRiskItem
   - type: StealTarget
     stealGroup: NukeDisk
+  #ss220 pinpointer ui add start
+  - type: TrackedItem
+  #ss220 pinpointer ui add end
 
 - type: entity
   name: nuclear authentication disk
