--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -28,6 +28,9 @@
     - HighRiskItem
   - type: StealTarget
     stealGroup: Hypospray
+  #ss220 pinpointer ui add start
+  - type: TrackedItem
+  #ss220 pinpointer ui add end
 
 - type: entity
   name: gorlex hypospray
