--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -475,6 +475,7 @@
     - SurgeryStatic
     dynamicPacks:
     - Chemistry
+    - MedServiceTech #ss220 add pinpointer crew
   - type: Machine
     board: MedicalTechFabCircuitboard
   - type: StealTarget
