--- a/Resources/Prototypes/SS220/Catalog/Fills/Lockers/command.yml
+++ b/Resources/Prototypes/SS220/Catalog/Fills/Lockers/command.yml
@@ -17,6 +17,7 @@
     - id: BlueShieldGasMask
     - id: RubberStampBlueShield #SS220-additional paperwork
     - id: JetpackMiniBlueFilled #SS220 BlueShield Rework
+    - id: PinpointerCrew
 
 - type: entity
   parent: GunSafe
