--- a/Resources/Prototypes/SS220/Entities/Objects/Tools/rcd-ce.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Tools/rcd-ce.yml
@@ -22,5 +22,8 @@
   - type: Tag
     tags:
     - HighRiskItem
+  #ss220 pinpointer ui add start
+  - type: TrackedItem
+  #ss220 pinpointer ui add end
   - type: StealTarget
     stealGroup: RCDCE
