--- a/Resources/Prototypes/Entities/Objects/Tools/jetpacks.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/jetpacks.yml
@@ -154,6 +154,9 @@
   - type: Item
     sprite: Objects/Tanks/Jetpacks/captain.rsi
     size: Normal
+  #ss220 pinpointer ui add start
+  - type: TrackedItem
+  #ss220 pinpointer ui add end
   - type: Tag
     tags:
     - HighRiskItem
