--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/secret_documents.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/secret_documents.yml
@@ -31,5 +31,8 @@
       tags:
         - Book
         - HighRiskItem
+    #ss220 pinpointer ui add start
+    - type: TrackedItem
+    #ss220 pinpointer ui add end
     - type: StealTarget
       stealGroup: BookSecretDocuments
