--- a/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/multiphase_energy_gun.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Weapons/Guns/multiphase_energy_gun.yml
@@ -48,6 +48,9 @@
     - HighRiskItem
     - Sidearm
     - WeaponMultiPhaseEnergyGun
+  #ss220 pinpointer ui add start
+  - type: TrackedItem
+  #ss220 pinpointer ui add end
   - type: StaticPrice
     price: 750
   - type: StealTarget
