--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -107,7 +107,7 @@
   - GroupTankHarness
   - LibrarianJumpsuit
   - CommonBackpack
-  - Glasses
+  - LibrarianEyes #SS220 ADD Monocle
   - Survival
   - Trinkets
   - GroupSpeciesBreathTool
