--- a/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
@@ -38,6 +38,13 @@
   - MagistratePwig
 
 - type: loadoutGroup
+  id: MagistrateEyes
+  name: loadout-group-magistrate-eyes
+  loadouts:
+  - GlassesCommand
+  - MagistrateMonocle
+
+- type: loadoutGroup
   id: MagistrateJumpsuit
   name: loadout-group-magistrate-jumpsuit
   loadouts:
@@ -722,6 +729,18 @@
   - ServiceWorkerWaitress
 
   # Сервисный работник (Конец)
+
+  # Библиотекарь (Начало)
+- type: loadoutGroup
+  id: LibrarianEyes
+  name: loadout-group-librarian-eyes
+  loadouts:
+  - Glasses
+  - GlassesJamjar
+  - GlassesJensen
+  - LibrarianMonocle
+  - GlassesCyber
+  # Библиотекарь (Конец)
 
 #! Сервис (Конец)
 
