--- a/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/SS220/Loadouts/role_loadouts.yml
@@ -7,6 +7,7 @@
   id: JobMagistrate
   groups:
   - MagistrateHead
+  - MagistrateEyes
   - MagistrateHeadset
   - MagistrateJumpsuit
   - MagistrateOuterClothing
