--- a/Resources/Prototypes/SS220/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Misc/paper.yml
@@ -394,3 +394,73 @@
     - state: folder-base
 
 # Папки End
+
+- type: entity
+  parent: BaseItem
+  id: PaperAirplane
+  name: paper airplane
+  description: A toy airplane made of paper.
+  components:
+  - type: Paper
+  - type: PaperLabelType
+  - type: Item
+    size: Tiny
+  - type: Tag
+    tags:
+    - Document
+    - Paper
+  - type: Appearance
+  - type: FaxableObject
+  - type: Flammable
+    fireSpread: true
+    alwaysCombustible: true
+    damage:
+      types:
+        Heat: 1
+  - type: FireVisuals
+    sprite: Effects/fire.rsi
+    normalState: fire
+  - type: Damageable
+    damageModifierSet: Wood
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 15
+      behaviors:
+      - !type:SpawnEntitiesBehavior
+        spawn:
+            Ash:
+              min: 1
+              max: 1
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: Food
+    solution: food
+    delay: 7
+    forceFeedDelay: 7
+  - type: FlavorProfile
+    flavors:
+    - paper
+  - type: BadFood
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 1
+        reagents:
+        - ReagentId: Fiber
+          Quantity: 1
+  - type: EmbeddableProjectile
+    offset: -0.15,0.0
+  - type: ThrowingAngle
+    angle: -90
+  - type: Sprite
+    sprite: Objects/Misc/bureaucracy.rsi
+    state: paper_plane
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Piercing: 0.1
+  - type: Construction
+    graph: PaperAirplane
+    node: paperairplane
