--- a/Resources/Prototypes/Catalog/Fills/Crates/armory.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/armory.yml
@@ -28,7 +28,7 @@
 
 - type: entity
   id: CrateTrackingImplants
-  parent: [ CrateWeaponSecure]
+  parent: [ CrateMedicalSecureImplant ] #SS220 The implants are in new crates
   name: tracking implants
   description: Contains a handful of tracking implanters. Good for prisoners you'd like to release but still keep track of.
   components:
