--- a/Resources/Prototypes/SS220/Entities/Structures/Storage/Crates/crates.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/Storage/Crates/crates.yml
@@ -73,4 +73,4 @@
   name: secure medical crate
   components:
   - type: AccessReader
-    access: [["Engineering"], ["Command"], ["Security"]]
+    access: [["Medical"], ["Command"], ["Security"]]
